--- a/src/public/profile/index.html
+++ b/src/public/profile/index.html
@@ -17,19 +17,13 @@
             </nav>
         </div>
 
-        <!--Login-->
         <div class="container pt-4">
-            <form id="loginForm">
-                <label for="email">Email</label>
-                <input id="email" type="email" name="email">
-                <label for="password">Contraseña</label>
-                <input id="password" type="password" name="password">
-                <input type="submit" value="login">
-            </form>
+            <p id="username"></p>
+            <button id="logout-button">Logout</button>
         </div>
 
     <!--Script-->
-    <script src="../js/login.js"></script>
+    <script src="../js/profile.js"></script>
 
     <!--Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
